# Skill-Router

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml
.agent/: memory.md  rules.md
.agent/evidence/: add-full-skill-router-v2-behavior-with-llm-fallback-explicit-selection-modes-rou.md  add-mismatch-aggregation-over-time-to-skill-router-so-repeated-bad-routes-block-.md  add-optional-openai-backed-fallback-routing-for-ambiguous-or-no-match-skill-rout.md  add-real-subtask-input-real-skill-file-loading-subagent-assignment-output-and-pr.md  create-a-python-skill-router-demo-project-in-dev-skill-router-that-reduces-repea.md  package-skill-router-as-a-reusable-local-library-and-cli-with-clean-docs-example.md  upgrade-skill-router-demo-to-use-manifest-loaded-skills-content-hash-cache-route.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.gsd/: current.json  workflow.json
.gsd/context/: add-full-skill-router-v2-behavior-with-llm-fallback-explicit-selection-modes-rou.md  add-mismatch-aggregation-over-time-to-skill-router-so-repeated-bad-routes-block-.md  add-optional-openai-backed-fallback-routing-for-ambiguous-or-no-match-skill-rout.md  (+4 more)
benchmarks/: labeled_subtasks.json
docs/: agent-skill-install.md  benchmark.md  claude-desktop-smoke-test.md  codex-plugin.md  comparison-with-without-router.md  roadmap.md  shipspec-integration.md
examples/: subtasks.json
manifests/: demo-skills.json
scripts/: benchmark.py  install_codex_plugin.py  package_agent_skill.py
tests/: test_skill_router.py
(+182 files in other folders)
